gpu: Fix Mac fullscreen video

https://codereview.chromium.org/2492583002/ introduced a bug where
one of the SwapBufeersCompleteParams were dropped before sending
an IPC to the gpu host. This CL plumbs the fullscreen_low_power_ca_context_id
parameter and deletes a stale comment.

BUG=664489
TBR=piman@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2499703002
Cr-Commit-Position: refs/heads/master@{#431652}

Former-commit-id: 8e56e9c3126ffa852351d14c2bd7d74e703e5827