gpu/ipc/service/gpu_command_buffer_stub.cc
@@ -293,6 +293,8 @@ void GpuCommandBufferStub::DidSwapBuffersComplete(
   send_params.ca_context_id = params.ca_context_id;
   send_params.fullscreen_low_power_ca_context_valid =
       params.fullscreen_low_power_ca_context_valid;
+  send_params.fullscreen_low_power_ca_context_id =
+      params.fullscreen_low_power_ca_context_id;
   send_params.io_surface = params.io_surface;
   send_params.pixel_size = params.pixel_size;
   send_params.scale_factor = params.scale_factor;
